--- a/testpage_üßtåvå.html
+++ b/testpage_üßtåvå.html
@@ -9,7 +9,7 @@
 <meta content='Title with special characters ö ä å !€% ß ü' property='og:title'>
 <meta content="Antti's test page" property='og:site_name'>
 <meta content='http://p5.focus.de/img/fotos/crop1031519/4332717639-w1200-h627-o-q75-p5/traxxx-SAT-Elefant.jpg' property='og:image'>
-<meta content='Cupcake ipsum dolor sit amet apple pie jelly applicake. Sugar plum cake candy canes gummi bears macaroon danish pudding jelly beans gummies. Chupa chups cupcake muffin cheesecake.' name='description'>
+<meta content='Kale chips leggings Carles deep v, tattooed whatever slow-carb dreamcatcher Tumblr selfies. Mustache sriracha Intelligentsia, fap XOXO polaroid tattooed banjo. Four dollar toast Thundercats heirloom messenger bag gastropub.' name='description'>
 </head>
 <body>
 <div class='wrapper'>
