--- a/testpage_üßtåvå.html
+++ b/testpage_üßtåvå.html
@@ -8,7 +8,7 @@
 <meta content='http://plugindemo.de:3007/plugins-demo/testpage.html' property='og:url'>
 <meta content='Title with special characters ö ä å !€% ß ü' property='og:title'>
 <meta content="Antti's test page" property='og:site_name'>
-<meta content='http://p5.focus.de/img/fotos/crop1031519/4332717639-w1200-h627-o-q75-p5/traxxx-SAT-Elefant.jpg' property='og:image'>
+<meta content='http://tclhost.com/AGfw6mq.gif' property='og:image'>
 <meta content='Totally new text.' name='description'>
 </head>
 <body>
