--- a/testpage_üßtåvå.html
+++ b/testpage_üßtåvå.html
@@ -9,7 +9,7 @@
 <meta content='Title with special characters ö ä å !€% ß ü' property='og:title'>
 <meta content="Antti's test page" property='og:site_name'>
 <meta content='http://tclhost.com/AGfw6mq.gif' property='og:image'>
-<meta content='Totally new text.' name='description'>
+<meta content='New text.' name='description'>
 </head>
 <body>
 <div class='wrapper'>
