--- a/testpage_üßtåvå.html
+++ b/testpage_üßtåvå.html
@@ -9,7 +9,7 @@
 <meta content='Title with special characters ö ä å !€% ß ü' property='og:title'>
 <meta content="Antti's test page" property='og:site_name'>
 <meta content='http://p5.focus.de/img/fotos/crop1031519/4332717639-w1200-h627-o-q75-p5/traxxx-SAT-Elefant.jpg' property='og:image'>
-<meta content='Updated text.' name='description'>
+<meta content='Funky fresh shizznit bling bling sit bling bling, daahng dawg shit yippiyo. Funky fresh sapien velit, bizzle doggy, izzle dope, gravida vel, bling bling. Pellentesque fo shizzle mah nizzle fo rizzle, mah home g-dizzle . Sizzle erizzle. I am in the shizzle izzle dolor dapibizzle turpis tempizzle uhuh ... yih!. Maurizzle pellentesque sure izzle turpizzle. Mammasay mammasa mamma oo sa ghetto tortor. boofron rhoncizzle i saw beyonces tizzles and my pizzle went crizzle. Izzle hizzle habitasse platea dictumst. Break yo neck, yall dapibizzle. Curabitizzle tellus urna, pretium gangsta, mattizzle ac, da bomb get down get down, nunc. I am in the shizzle stuff. Integer semper break yo neck, yall shizzle my nizzle crocodizzle purizzle.' name='description'>
 </head>
 <body>
 <div class='wrapper'>
