--- a/testpage_no_picture.html
+++ b/testpage_no_picture.html
@@ -5,10 +5,11 @@
 <link href="/assets/plugins-demo/application.css?body=1" media="screen" rel="stylesheet" />
 <link href="/assets/plugins-demo/plugins.css?body=1" media="screen" rel="stylesheet" />
 <meta content='article' property='og:type'>
+<meta content='http://tclhost.com/AGfw6mq.gif' property='og:image'>
 <meta content='http://plugindemo.de:3007/plugins-demo/testpage.html' property='og:url'>
-<meta content='Title with special characters ö ä å !€% ß ü' property='og:title'>
-<meta content="Antti's test page" property='og:site_name'>
-<meta content='Cupcake ipsum dolor sit amet apple pie jelly applicake. Sugar plum cake candy canes gummi bears macaroon danish pudding jelly beans gummies. Chupa chups cupcake muffin cheesecake.' name='description'>
+<meta content='UPDATED Title with special characters ö ä å !€% ß ü' property='og:title'>
+<meta content="Antti's test page part 2 NEW" property='og:site_name'>
+<meta content='This is new. Cupcake ipsum dolor sit amet apple pie jelly applicake. Sugar plum cake candy canes gummi bears macaroon danish pudding jelly beans gummies. Chupa chups cupcake muffin cheesecake.' name='description'>
 </head>
 <body>
 <div class='wrapper'>
