--- a/testpage_no_picture.html
+++ b/testpage_no_picture.html
@@ -8,7 +8,7 @@
 <meta content='http://plugindemo.de:3007/plugins-demo/testpage.html' property='og:url'>
 <meta content='UPDATED Title with special characters ö ä å !€% ß ü' property='og:title'>
 <meta content="Antti's test page part 2 NEW" property='og:site_name'>
-<meta content='This is new again. Cupcake ipsum dolor sit amet apple pie jelly applicake. Sugar plum cake candy canes gummi bears macaroon danish pudding jelly beans gummies. Chupa chups cupcake muffin cheesecake.' name='description'>
+<meta content='This is totally new. Cupcake ipsum dolor sit amet apple pie jelly applicake. Sugar plum cake candy canes gummi bears macaroon danish pudding jelly beans gummies. Chupa chups cupcake muffin cheesecake.' name='description'>
 </head>
 <body>
 <div class='wrapper'>
