--- a/testpage_no_picture.html
+++ b/testpage_no_picture.html
@@ -6,7 +6,7 @@
 <link href="/assets/plugins-demo/plugins.css?body=1" media="screen" rel="stylesheet" />
 <meta content='article' property='og:type'>
 <meta content='http://plugindemo.de:3007/plugins-demo/testpage.html' property='og:url'>
-<meta content='UPDATED TEST TEST TEST Title with special characters ö ä å !€% ß ü' property='og:title'>
+<meta content='UPDATED Fri 3 July at 12.45 Title with special characters ö ä å !€% ß ü' property='og:title'>
 <meta content="Antti's test page part" property='og:site_name'>
 <meta content='Cupcake ipsum dolor sit amet apple pie jelly applicake. Sugar plum cake candy canes gummi bears macaroon danish pudding jelly beans gummies. Chupa chups cupcake muffin cheesecake.' name='description'>
 </head>
