--- a/testpage_üßtåvå.html
+++ b/testpage_üßtåvå.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Plugins Demo</title>
+<!--<title>Plugins Demo</title>-->
 <link href="/assets/plugins-demo/application.css?body=1" media="screen" rel="stylesheet" />
 <link href="/assets/plugins-demo/plugins.css?body=1" media="screen" rel="stylesheet" />
 <meta content='article' property='og:type'>
 <meta content='http://plugindemo.de:3007/plugins-demo/testpage.html' property='og:url'>
-<meta content='Title with special characters ö ä å !€% ß ü' property='og:title'>
+<!--<meta content='Title with special characters ö ä å !€% ß ü' property='og:title'>-->
 <meta content="Antti's test page" property='og:site_name'>
 <meta content='http://p5.focus.de/img/fotos/crop1031519/4332717639-w1200-h627-o-q75-p5/traxxx-SAT-Elefant.jpg' property='og:image'>
-<meta content='Totally new text.' name='description'>
+<!--<meta content='Totally new text.' name='description'>-->
 </head>
 <body>
 <div class='wrapper'>
